Adjusted java memory settings to use minimal memory. PERM_GEN now runs at 30 of 32 Mb so watch for out-of-memory errors.